Fix: Resolve AWS CF stack deployment errors
- cloudformationA.yaml
  - Update Mapping.UserConfig.Login.Pass value to 
    satisfy minimum IAM user creation requirements
  - Update 
    Resources.DynamoLambda.Properties.Code.Runtime 
    value to a supported Node.js runtime for AWS Lambda
  - Add minimal Dynamo read-only table and item 
    IAM permissions to students-policy IAM policy and
    Students group
- cloudformationB.yaml
  - Update Jenkins deb package installer to more 
    recent version, 2.303.2, to resolve Git and 
    AWS SNS plugin errors

Add files:
- assignment-notes.md
- aws_sm_get_random_password.sh
- generate_random_password.py

--- a/cloudformationA.yaml
+++ b/cloudformationA.yaml
@@ -5,7 +5,7 @@ Mappings:
   UserConfig:
     Login:
       Name: student
-      Pass: password
+      Pass: h,q1y9v7$}tS
 Resources:
   DynamoLambda:
     DependsOn:
@@ -59,7 +59,7 @@ Resources:
       Role: !GetAtt 
         - DynamoAccessRole
         - Arn
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       Timeout: 5
   DynamoTable:
     Type: 'AWS::DynamoDB::Table'
@@ -136,6 +136,13 @@ Resources:
                 Resource: '*'
               - Effect: Allow
                 Action:
+                  - dynamodb:GetItem
+                  - dynamodb:BatchGetItem
+                  - dynamodb:DescribeTable
+                  - dynamodb:ListTables
+                  - dynamodb:Scan
+                  - dynamodb:Query
+                  - dynamodb:ConditionCheckItem
                   - 'elasticloadbalancing:Describe*'
                   - 'elasticloadbalancing:AddTags'
                   - 'elasticloadbalancing:ApplySecurityGroupsToLoadBalancer'
